tests/ui/endpoint/auth_data_non_clone.stderr
error[E0277]: the trait bound `gotham_restful::AuthStatus<AuthData>: Clone` is not satisfied
  --> tests/ui/endpoint/auth_data_non_clone.rs:15:25
   |
15 | async fn read_all(auth: AuthStatus<AuthData>) -> Result<NoContent, AuthError> {
   |                         ^^^^^^^^^^ the trait `Clone` is not implemented for `gotham_restful::AuthStatus<AuthData>`
   |
   = note: required for `gotham_restful::AuthStatus<AuthData>` to implement `Clone`
help: consider borrowing here
   |
15 | async fn read_all(auth: &AuthStatus<AuthData>) -> Result<NoContent, AuthError> {
   |                         +
